# rustane

./: .gitignore  AGENTS.md  CREDITS.md  Cargo.toml  LICENSE  README.md
crates/ane-bridge/: Cargo.toml
crates/ane-bridge/src/: lib.rs
crates/ane-bridge/tests/: bench_ane_tflops.rs  bench_f16_convert.rs  phase0_verify.rs  phase1_training_probe.rs
crates/engine/: Cargo.toml
crates/engine/src/: bench_result.rs  checkpoint.rs  data.rs  decode.rs  full_model.rs  inference.rs  layer.rs  lib.rs  metal_adam.rs  metal_ffn.rs  metal_muon.rs  model.rs  training.rs
crates/engine/src/cpu/: adam.rs  cross_entropy.rs  embedding.rs  mod.rs  rmsnorm.rs  silu.rs  vdsp.rs
crates/engine/src/kernels/: dyn_matmul.rs  ffn_fused.rs  mod.rs  sdpa_bwd.rs  (+1 more)
crates/engine/tests/: ab_diagnostics.rs  auto_4thread_adam_1024.rs  auto_deferred_ffn_readback.rs  auto_fuse_qbwd_kvbwd.rs  auto_fwd_rebalance_staging.rs  auto_gqa_smoke.rs  auto_kv_decode.rs  auto_leaky_relu_sq_smoke.rs  auto_move_dw1_to_sdpabwd2.rs  auto_move_dw2_to_sdpabwd1.rs  auto_muon_smoke.rs  auto_parallel_adam_threads.rs  auto_pg_smoke.rs  auto_presig_overlap.rs  bench_decode_input_path.rs  bench_fwd_only_scale.rs  bench_hw_execution_time.rs  bench_param_sweep.rs  bench_recompile.rs  bench_stage_weights.rs  bench_step_time.rs  conv1x1_correctness.rs  conv1x1_gate_test.rs  gpu_ffn_parity.rs  memory_leak_test.rs  metal_adam_test.rs  phase3_kernels.rs  phase3_training.rs  phase4_pretraining_checks.rs  phase4_training.rs  profile_600m.rs  profile_layer_ops.rs  profile_single_layer.rs  stress_max_scale.rs  sweep_configs.rs
(+27 files in other folders)
