[package]
name = "ane-bridge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
ane.workspace = true
objc2.workspace = true
objc2-foundation.workspace = true
objc2-io-surface.workspace = true
half.workspace = true
libc.workspace = true
thiserror.workspace = true

[dev-dependencies]
